# aiscaffold

./: .gitignore  README.md  copier.yml
core/: README.md  pyproject.toml
core/src_aiscaffold/: __init__.py  cli.py  eval_harness.py  progress_notes.py  task_tracker.py
scripts/: validate_generated.sh
template/{{project_slug}}/: .cursorrules.jinja  .env.example.jinja  .gitignore  .pre-commit-config.yaml.jinja  CLAUDE.md.jinja  Makefile.jinja  README.md.jinja  docker-compose.yml.jinja  pyproject.toml.jinja  requirements.txt.jinja
template/{{project_slug}}/.cursor/agents/: ai-engineer.md.jinja  code-reviewer.md  codebase-scout.md  data-flow-guardian.md  debugger.md  design-doc-author.md  minimalist.md  project-curator.md  prompt-engineer.md  red-team.md  security-hardener.md  solution-architect.md  sql-pro.md.jinja  test-architect.md  ux-researcher.md.jinja
template/{{project_slug}}/.cursor/rules/: example.mdc
template/{{project_slug}}/.github/workflows/: ci.yml.jinja
template/{{project_slug}}/deploy/k8s/: configmap.yaml.jinja  (+2 more)
template/{{project_slug}}/docs/: AI_ENGINEERING_BEST_PRACTICES_2026.md  ARCHITECTURE.md.jinja  GLOSSARY.md  INDEX.md.jinja  PLATFORM_GUIDE.md  QUALITY_SCORE.md.jinja  REFERENCES.md  TEAM_OVERVIEW.md  TESTING_STANDARDS.md.jinja  TUTORIAL.md.jinja
template/{{project_slug}}/scripts/: demo.py.jinja  red_team_check.py  setup_check.py.jinja
template/{{project_slug}}/tests/: conftest.py.jinja  test_api.py.jinja  test_architecture.py.jinja  test_e2e.py.jinja  test_learning.py.jinja  test_middleware.py.jinja  test_orchestration.py.jinja
(+38 files in other folders)
