[project]
name = "aiscaffold"
version = "0.1.0"
description = "AI project scaffold with 2026 best practices - CLI and core utilities"
requires-python = ">=3.12"
dependencies = [
    "copier>=9.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
aiscaffold = "aiscaffold.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiscaffold"]

[tool.pytest.ini_options]
testpaths = ["tests"]
